Settings: Replace dark mode switch by theme selector
In VLC settings, remove the old switch that allowed to enable dark mode.
Add a new selector with Bright, Dark and Automatic options which :
 - forces bright theme
 - forces dark theme
 - follows system settings

Changing iOS 13 system-wide theme will not change VLC settings anymore.

Also add the following translations for the new switches :
 - English
 - English (United Kingdom)
 - French
 - German

Closes #663

--- a/Resources/Settings.bundle/de.lproj/Root.strings
+++ b/Resources/Settings.bundle/de.lproj/Root.strings
@@ -4,11 +4,13 @@
 "SETTINGS_VIDEO_TITLE" = "Video";
 "SETTINGS_AUDIO_TITLE" = "Audio";
 
-"SETTINGS_THEME_SUBTITLE" = "App-Farben ändern";
+"SETTINGS_THEME_BRIGHT" = "Helles Design";
+"SETTINGS_THEME_DARK" = "Dunkles Design";
+"SETTINGS_THEME_SYSTEM" = "Automatisch";
 "SETTINGS_PRIVACY_SUBTITLE" = "In den Einstellungen öffnen";
 "SETTINGS_PASSCODE_LOCK_SUBTITLE" = "Zugriff auf Ihre Inhalte sichern";
 
-"SETTINGS_DARKTHEME" = "Dunkles Design";
+"SETTINGS_DARKTHEME" = "Aussehen";
 "SETTINGS_TIME_STRETCH_AUDIO" = "Audio-Tonzeitstreckung";
 "SETTINGS_BACKGROUND_AUDIO" = "Hintergrundaudiowiedergabe";
 "SETTINGS_GENERIC_TITLE" = "Allgemein";
