VideoModel: Update indicator string

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -317,7 +317,7 @@
 "ARTISTS" = "Artists";
 "EPISODES" = "Episodes";
 "GENRES" = "Genres";
-"MOVIES" = "Movies";
+"ALL_VIDEOS" = "All videos";
 "SONGS" = "Songs";
 "PLAYLISTS" = "Playlists";
 "VIDEO_GROUPS" = "Video groups";
